--- a/MODELO RELATORIO/MODELO - CONTROLE.tex
+++ b/MODELO RELATORIO/MODELO - CONTROLE.tex
@@ -236,14 +236,19 @@ Professor:  Fábio Meneghetti Ugulino de Araújo.
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=12cm]{simulator.png}
+\includegraphics[width=11cm]{ImagensLab4/simulator.png}
 \caption{R2D2E - Tank Simulator}
 \label{r2d2e}
 \end{figure}
 
-\hspace{4ex}Pretende-se controlar o nível de água de ambos os tanques da planta, para isso, foi implementado os controladores Proporcional (P), Proporcional Integrativo (PI), Proporcional Derivativo (PD), Proporcional Integrativo Derivativo (PID) e Proporcional Integrativo Derivativo em controle de ação baseado no sinal do processo (PI-D). Quem irá escolher qual controle será usado é o usuário, através da interface do programa desenvolvido, como mostrado na figura  ...:
+\hspace{4ex}Pretende-se controlar o nível de água de ambos os tanques da planta, para isso, foi implementado os controladores Proporcional (P), Proporcional Integrativo (PI), Proporcional Derivativo (PD), Proporcional Integrativo Derivativo (PID) e Proporcional Integrativo Derivativo em controle de ação baseado no sinal do processo (PI-D). Quem irá escolher qual controle será usado é o usuário, através da interface do programa desenvolvido, como mostrado na figura \ref{interface}:
 
-PHOTO da interface
+\begin{figure}[H]
+\centering
+\includegraphics[width=11cm]{ImagensLab4/interface-versao4.png}
+\caption{Interface do software de controle}
+\label{interface}
+\end{figure}
 
 \hspace{4ex}Além dessas opções, o usuário também deve escolher os ganhos dos controladores Kp, Ki e ou Kd, ou $\tau_i$ e $\tau_d$, o  sinal de referência a ser enviado, o offset, a análise da resposta do sistema para o tempo de subida (t$_r$), por exemplo, de 5\% à 95\%, e o tempo de acomodação (t$_s$), para as faixas de 2\%, 5\% e 10\% do degrau. Ademais, é possível saber os valores do  t$_r$, t$_s$, tempo de pico (t$_p$) e o sobressinal (Mp) do sistema de segunda ordem.
 
@@ -338,8 +343,8 @@ double PID::Controle(double e, double y, double h)
 
 \begin{figure}[H]
      \centering
-     \subfloat[][Controlador Mestre]{\includegraphics[width=4cm]{controlador1}\label{<figureP1>}}\hspace{4ex}
-     \subfloat[][Controlador Escravo]{\includegraphics[width=4cm]{controlador2}\label{<figureP2>}}\\
+     \subfloat[][Controlador Mestre]{\includegraphics[width=4cm]{ImagensLab4/controlador1}\label{<figureP1>}}\hspace{4ex}
+     \subfloat[][Controlador Escravo]{\includegraphics[width=4cm]{ImagensLab4/controlador2}\label{<figureP2>}}\\
      \caption{Interface para a escolha dos controladores}
      \label{fig:controladores}
 \end{figure}
