--- a/MODELO RELATORIO/MODELO - CONTROLE.tex
+++ b/MODELO RELATORIO/MODELO - CONTROLE.tex
@@ -98,12 +98,12 @@ CURSO DE ENGENHARIA DE COMPUTAÇÃO
 
 \vspace{3.6cm}
 
-{\bf{\large RELATÓRIO DA 3ª EXPERIÊNCIA\\
-CONTROLE DE SISTEMAS DINÂMICOS: SISTEMA DE SEGUNDA ORDEM\\
+{\bf{\large RELATÓRIO DA 4ª EXPERIÊNCIA\\
+CONTROLE DE SISTEMAS DINÂMICOS: CONTROLE EM CASCATA\\
 }}
 \vspace{1.5cm}
 {\large TURMA: 01 A\\
-	GRUPO Nº}
+	GRUPO Nº 02}
 
 \vspace{3.6cm}
 
@@ -148,7 +148,7 @@ MÁRCIO LUIZ BEZERRA LOPES JÚNIOR: 20160154326\\
 \end{center}
 \vspace{3cm}
 
-{\bf{\large {\centering CONTROLE DE SISTEMAS DINÂMICOS: SISTEMA DE SEGUNDA ORDEM\\}}}
+{\bf{\large {\centering CONTROLE DE SISTEMAS DINÂMICOS: CONTROLE EM CASCATA\\}}}
 
 \vspace{4cm}
 
@@ -156,9 +156,9 @@ MÁRCIO LUIZ BEZERRA LOPES JÚNIOR: 20160154326\\
 
 {\normalsize
 
-Terceiro Relatório apresentado à disciplina de
+Quarto Relatório apresentado à disciplina de
 Laboratório de Sistemas de Controle, correspondente à
-avaliação da 1º unidade do semestre 2017.1 do 8º período
+avaliação da 2º unidade do semestre 2017.1 do 8º período
 do curso de Engenharia de Computação da
 Universidade Federal do Rio Grande do Norte, sob
 orientação do {\bf Prof. Fábio Meneghetti Ugulino de
