comentando as referencias

--- a/MODELO RELATORIO/MODELO - CONTROLE.tex
+++ b/MODELO RELATORIO/MODELO - CONTROLE.tex
@@ -416,12 +416,12 @@ Por fim o teste feito com o controlador PD. Foi usado uma constante $K_D$ baixa 
 %%%%%%%% REFERÊNCIAS %%%%%%%%%%%%%%%%%
 
 % Referências bibliogáficas (geradas automaticamente)
-\addcontentsline{toc}{chapter}{Referências bibliográficas}
-\bibliography{bib/bibliografia}
+%\addcontentsline{toc}{chapter}{Referências bibliográficas}
+%\bibliography{bib/bibliografia}
 
-\appendix
+%\appendix
 
 %Apêndice A
-\include{apendice}
+%\include{apendice}
 
 \end{document}
