--- a/MODELO RELATORIO/MODELO - CONTROLE.tex
+++ b/MODELO RELATORIO/MODELO - CONTROLE.tex
@@ -340,11 +340,11 @@ Na figura \ref{curva} pode ser visto a representação desses tempos mencionados
 
 \hspace{4ex}Utilizando o simulador R2D2E, foram feitos testes com o controlador mestre e o escravo, como também, com apenas um controlador para alcançar determinados níveis dos tanques da planta, os quais serão expostos nos resultados.
 
-\hspace{4ex}Para isso, foi implementado uma classe controlador a qual é determinada de acordo com as escolhas do usuário, ou seja, se é P, PI, PD, PID ou PI-D. Por exemplo, se o usuário escolhe o controlador PD, ele fornecerá apenas os valores de Kp e Kd, ou Kp e $\tau_d$, e a partir desses valores a classe assumirá que Ki ou $\tau_i$ não existe, ou seja, o valor da integral será zero. O mesmo acontece se for escolhido o PI, nesse caso, o valor da derivada do erro será zero. Observe o método abaixo:
-\\
+\hspace{4ex}Para isso, foi implementado uma classe controlador a qual é determinada de acordo com as escolhas do usuário, ou seja, se é P, PI, PD, PID ou PI-D. Por exemplo, se o usuário escolhe o controlador PD, ele fornecerá apenas os valores de Kp e Kd, ou Kp e $\tau_d$, e a partir desses valores a classe assumirá que Ki ou $\tau_i$ não existe, ou seja, o valor da integral será zero. O mesmo acontece se for escolhido o PI, nesse caso, o valor da derivada do erro será zero.
+
+\hspace{4ex}Observe os métodos abaixo, o primeiro é para os casos em que o usuário escolher os controladores P, PI, PD ou PID, enquanto que o segundo método foi criado para o caso em que se quer usar o PI-D, pois utiliza o sinal do processo (y) ao invés de usar o erro.
 \begin{lstlisting}
-double PID::Controle(double e, double h)
-//Metodo para os controladores P, PI, PD e PID
+double PID::Controle(double e, double h)//Controladores P, PI, PD e PID
 {
     I= I+Ki*e*h; //Simpsons (e+e_ant)*h/2 - integral do erro
     D= Kd*(e-e_ant)/h; //Derivada do erro
@@ -352,16 +352,14 @@ double PID::Controle(double e, double h)
     return Kp*e+I+D; //Sinal de controle
 }
 
-double PID::Controle(double e, double y, double h)
-//Metodo para o controlador PI-D
+double PID::Controle(double e, double y, double h)//Controlador PI-D
 {
-    I= I+Ki*e*h;
-    D= Kd*(y-e_ant)/h;
-    e_ant= y;
-    return Kp*e+I+D;
+    I= I+Ki*e*h; //Integral do erro
+    D= Kd*(y-e_ant)/h; //Derivada do sinal do processo
+    e_ant= y; //Sinal do processo
+    return Kp*e+I+D; //Sinal de controle
 }
 \end{lstlisting}
-
 \hspace{4ex}No software desenvolvido, esses valores podem ser escolhidos como mostrado na figura \ref{controladores}.
 
 \begin{figure}[H]
